# fast-api-training

./: alembic.ini  docker-compose.yaml  justfile  main.py  pre-commit-config.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 055e9b937e47_added_none_to_description_and_comment.py  167523338efb_init.py  4bb0f239ca18_added_book_author_relations.py  57837ccd6c33_add_description.py  5e0a42e48420_added_erd_to_my_db.py  8048120d45f3_added_none_to_author_name.py  a5827a8f474a_add_erd_to_mydb.py
app/: endpoints.py  main.py  mixins.py  models.py  orm.py  other.py
app/integrations/postgres/: author_repository.py  book_repository.py  comment_repository.py  publisher_repository.py  user_repository.py
app/services/: author_service.py  book_service.py  comment_service.py  publisher_service.py  user_service.py
app/transport/depends/: db.py
app/transport/handlers/: authors.py  books.py  comments.py  publishers.py  users.py
app/utils/: settings.py
test/: tests.py
test/integrations/postgres/: db_fixtures.py
test/services/book_service/: test_get_books.py
